--- a/META.yml
+++ b/META.yml
@@ -29,6 +29,7 @@ requires:
   Exporter: 0
   HTML::Entities: 0
   Readonly: 0
+  perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=PYX-Utils
   homepage: https://github.com/tupinek/PYX-Utils
